js/js.translator/testData/incremental/invalidation/makeOpenMethodFinal/lib1/l1.1.kt
class Foo {
    fun foo(): Int = 42
}

fun use(foo: Foo): Int = foo.foo()
